fixed cell dimensions on mobile devices

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -173,6 +173,7 @@ button, .LinkButton {
 .game-container {
 	display: grid;
 	grid-auto-flow: row;
+	justify-items: center;
 	align-content: center;
 
 	.game-board {
@@ -204,8 +205,8 @@ button, .LinkButton {
 	justify-items: center;
 	align-items: center;
 
-	width: 18px;
-	height: 18px;
+	width: 20px;
+	height: 20px;
 
 	font-weight: 600;
 	font-size: 14px;
